@@ -1,3 +1,13 @@
+2007-03-22T13:58	C.J. Adams-Collier <cjac@colliertech.org>
+	Exposing an XmlDocument that represents the prebuild.xml file
+	passed to the program
+	
+	* src/Core/Kernel.cs
+	- created an object member called XmlDocument m_CurrentDoc
+	- created a property to access its value
+	- using m_CurrentDoc to load up the prebuild.xml file rather than
+	  a local variable called "doc"
+
 2007-03-22	C.J. Adams-Collier <cjac@colliertech.org>
 	* prebuild.xml
 	- added autotools.xml created at https://svn.colliertech.org/mono/dnpbAutotools/dnpbAutotools/autotools.xml
